...
    <string name="Confirmation.staticAddressLabel">Address:</string>
    <string name="Donate.word">Donate</string>
    <string name="Donate.toThe">"Donate to the "</string>
    <string name="FeeSelector.luxury">Luxury</string>
    <string name="FeeSelector.luxuryTime">2.5 - 5+ minutes</string>
    <string name="FeeSelector.luxuryMessage">This option virtually guarantees acceptance of your transaction though you are paying a premium.</string>
    <string name="settings">Settings</string>
    <string name="message">Message</string>
    <string name="ipfs">IPFS</string>
    <string name="MenuButton.supportCenter">Support center</string>
    <string name="supportCenter.eac">Introduction EAC and use of EACTALK</string>
    <string name="supportCenter.gainEac">How to get EAC</string>
    <string name="supportCenter.buyEac">Buy EAC tutorial</string>
...
    <string name="txt.i_see">I see</string>
    <string name="txt.pick_photo">Select Photo</string>
    <string name="txt.unknown_qrcode">Unknown QRcode</string>
    <string name="tx_message">Message</string>

    <!--  add by oldfeel  -->
    <string name="about">About us</string>
    <string name="home_url">Home api</string>
    <string name="earth_coin_node">Earthcoin node</string>
    <string name="node_settings">Node settings</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="save_success">Save success</string>
...
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="about_content">EacTalk is a meta-universe information publishing social web 3.0 application developed by a group of freedom-loving technicians based on EAC blockchain technology.\n\n1.We don\'t try to control anything. We want freedom of speech in the world. Speech itself is not right or wrong. The judgment of right or wrong is just that everyone has a different position;\n\n2.We
    <string name="listen_content">EacTalk can be used freely and spread freely. It provides complete privacy protection, and will not require and collect any personal information. The authenticity of the information is self certified by the user, and the authentication option is given to the user.\n\n1. The information ownership belongs to the account owner, the account belongs to the user, the ac
    <string name="eac_help">EAC node: it is used to link the blockchain network and save your data to the chain. It is recommended to link your own trusted node. If conditions permit, it is recommended to build self built nodes. Please refer to help center for operation.</string>
    <string name="ipfs_help">IPFs node: used to store non text information in messages, such as video, audio, pictures, etc. it needs faster upload speed. It is recommended to build a self built node. Please refer to help center for operation.</string>
    <string name="copy_address">Copy</string>
    <string name="delete">Delete</string>
    <string name="important_tips">Important tips</string>
    <string name="address_">Address:</string>
    <string name="status_">Status:</string>
    <string name="input_key_word_one_by_one">Write each word in order and save to a safe place</string>
    <string name="previous">Previous</string>
...
